syntax = "proto3";
option optimize_for = LITE_RUNTIME;

message IdentifyUser {
    string id           = 1; //日志id，唯一
    bool   approved     = 2; //批准标记
}

